Bug 484864 - drkonqi-coredump-pickup.service breaks logging out during pre-start
Summary: drkonqi-coredump-pickup.service breaks logging out during pre-start
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 485242 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-01 10:55 UTC by Aleksey Gavrilov
Modified: 2024-04-08 20:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.4
Sentry Crash Report:


Attachments
System log immediately after trying to log out (1.73 KB, text/plain)
2024-04-01 10:55 UTC, Aleksey Gavrilov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aleksey Gavrilov 2024-04-01 10:55:05 UTC
Created attachment 168012 [details]
System log immediately after trying to log out

SUMMARY
drkonqi-coredump-pickup.service has a line 'ExecStartPre=/usr/bin/sleep 60'. Trying to log out while that sleep command is running will fail to log out and leave the system in the semi-broken state.

STEPS TO REPRODUCE
1. Try to log out during 60 seconds after logging in

OBSERVED RESULT
Logging out fails, can't log out/shutdown/reboot/etc from plasma anymore, probably something else

EXPECTED RESULT
Logging out works

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3

ADDITIONAL INFORMATION
See attached log
Comment 1 Bug Janitor Service 2024-04-03 04:52:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/232
Comment 2 Harald Sitter 2024-04-05 14:17:26 UTC
Git commit 8d803e5eaa9c6abb0144e55d918aa0558420a285 by Harald Sitter.
Committed on 05/04/2024 at 14:15.
Pushed by sitter into branch 'master'.

coredump-processor: replace sleep hack with in-process sleep

the hack tripped up start timeouts and also prevents stops from
enqueuing properly. instead consider the unit started right away and
then sleep before processing data inside the process.

M  +2    -5    src/coredump/processor/drkonqi-coredump-pickup.service.cmake
M  +10   -0    src/coredump/processor/main.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/8d803e5eaa9c6abb0144e55d918aa0558420a285
Comment 3 Harald Sitter 2024-04-05 14:24:56 UTC
Git commit 45fcd31c993cfa518e5957f4dcff51ffeb0d7405 by Harald Sitter.
Committed on 05/04/2024 at 14:18.
Pushed by sitter into branch 'Plasma/6.0'.

coredump-processor: replace sleep hack with in-process sleep

the hack tripped up start timeouts and also prevents stops from
enqueuing properly. instead consider the unit started right away and
then sleep before processing data inside the process.


(cherry picked from commit 8d803e5eaa9c6abb0144e55d918aa0558420a285)

M  +2    -5    src/coredump/processor/drkonqi-coredump-pickup.service.cmake
M  +10   -0    src/coredump/processor/main.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/45fcd31c993cfa518e5957f4dcff51ffeb0d7405
Comment 4 Nate Graham 2024-04-08 20:09:57 UTC
*** Bug 485242 has been marked as a duplicate of this bug. ***