coredump-processor: replace sleep hack with in-process sleep

the hack tripped up start timeouts and also prevents stops from
enqueuing properly. instead consider the unit started right away and
then sleep before processing data inside the process.

BUG: 484864


(cherry picked from commit 8d803e5eaa9c6abb0144e55d918aa0558420a285)